# RayTracing

./: .gitignore  CMakeLists.txt  README.md  build.bat  main.cpp  rt1.ppm  spectrum.ppm
include/: CIEcolor.hpp  camera.hpp  canvas.hpp  config.hpp  hittable.hpp  inv_sphere.hpp  light.hpp  light_physics.hpp  progress_bar.hpp  ray.hpp  renderPipeline.hpp  scene.hpp  sphere.hpp  vec3.hpp
src/: grayscale_plot.cpp  raytracer.cpp  renderPipeline.cpp  spectrum_plot.cpp
src/renderer/: grayscale_plot.cpp  raytracer_1.cpp  spectrum_plot.cpp
